@@ -180,6 +180,10 @@ Bug Fixes
 
 * SOLR-4813: Fix SynonymFilterFactory to allow init parameters for
   tokenizer factory used when parsing synonyms file.  (Shingo Sasaki, hossman)
+
+* SOLR-4829: Fix transaction log leaks (a failure to clean up some old logs)
+  on a shard leader, or when unexpected exceptions are thrown during log
+  recovery.  (Steven Bower, Mark Miller, yonik)
   
 
 Other Changes
